Formulaire contact et début version desktop

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import Logo from "../assets/icons/logo.svg";
     </button>
     <nav
         id="menu"
-        class="flex-1 px-12 py-40 flex mt-20 flex-col fixed z-10 inset-0 bg-sky-950 visible opacity-100 *:after:block max-lg:aria-hidden:invisible max-lg:aria-hidden:opacity-0 lg:mt-0 lg:flex-row lg:static lg:bg-transparent lg:py-6 lg:visible lg:opacity-100"
+        class="flex-1 px-12 py-40 flex mt-20 flex-col fixed z-10 inset-0 bg-sky-950 visible opacity-100 *:after:block max-lg:aria-hidden:invisible max-lg:aria-hidden:opacity-0 lg:mt-0 lg:flex-row lg:static lg:bg-transparent lg:py-6 lg:visible lg:opacity-100 lg:gap-3 lg:justify-end "
         aria-hidden="true"
     >
         <a href="/programmation">Programmation</a>
