--- a/src/pages/billetterie.astro
+++ b/src/pages/billetterie.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <section>
-        <h1 class="flex justify-center">Billeterie</h1>
+        <h1 class="flex justify-center">Billetterie</h1>
         <img src="./src/assets/images/hero_billetterie.avif" alt="" />
     </section>
     <section>
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
             pour vous d'assister au festival en réservant vos places via
             la Billetterie Grand Public
         </p>
-        <div class="flex justify-center">
+        <div class="pt-4 flex justify-center">
             <button class="uppercase bg-orange-400 rounded-3xl p-3"
                 ><a href="">Billetterie</a></button
             >
@@ -35,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
             suite de créer une offre personnalisée pour votre établissement via
             le pass culture :
         </p>
-        <div class="flex justify-center">
+        <div class="pt-4 flex justify-center">
             <button class="uppercase bg-orange-400 rounded-xl p-3"
                 ><a href="">Formulaire à remplir</a></button
             >
