--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import "./src/styles/global.css";
-import "../css/base.css";
+import "../css/global.css";
 const { titre } = Astro.props;
 ---
 
