--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import imageaccueil from "../assets/images/cineexterieur.avif";
 ---
 
 <Layout>
@@ -8,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
 		<div class="relative w-full mb-8">
 			<img
 				class="z-0 w-full relative lg:hidden"
-				src="./src/assets/images/cineexterieur.avif"
+				src=imageaccueil
 				alt="Cinéma en plein air"
 			/>
 			<img
