--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import imageaccueil from "../assets/images/cineexterieur.avif";
 		<div class="relative w-full mb-8">
 			<img
 				class="z-0 w-full relative lg:hidden"
-				src=imageaccueil
+				src={imageaccueil}
 				alt="Cinéma en plein air"
 			/>
 			<img
