--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Picture } from "astro.assets";
+import { Picture } from "astro:assets";
 import imageaccueil from "../assets/images/cineexterieur.avif";
 import imageaccueil2 from "../assets/images/cineexterieurwide.avif";
 import progaccueil from "./src/assets/images/prog_accueil.avif";
