--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Picture } from "astro:assets";
 import imageaccueil from "../assets/images/cineexterieur.avif";
 import imageaccueil2 from "../assets/images/cineexterieurwide.avif";
 import progaccueil from "./src/assets/images/prog_accueil.avif";
 import inviteaccueil from "./src/assets/images/invites_accueil.avif";
+import activiteaccueil from "./src/assets/images/activites_accueil.avif";
+import infosaccueil from "./src/assets/images/infos_accueil.avif";
+import aboutaccueil from "./src/assets/images/about_accueil.avif";
+import contactaccueil from "./src/assets/images/contact_accueil.avif";
+import pma from "./src/assets/images/pma.avif";
+import cnc from "./src/assets/images/cnc.avif";
+import bfc from "./src/assets/images/bfc.avif";
 ---
 
 <Layout>
@@ -54,15 +60,11 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 				<!-- Programmation -->
 				<div class="lg:col-span-6 xl:col-span-4">
 					<div class="relative h-full">
-						<figure
+						<img
 							class="w-full rounded-lg h-64 lg:h-80 object-cover"
-						>
-							<Picture
-								<img
-								src={progaccueil.src}
-								alt="Programmation"
-							/>/>
-						</figure>
+							src={progaccueil.src}
+							alt="Programmation"
+						/>
 						<div class="flex justify-end">
 							<button
 								class="relative -mt-4 -mr-2 uppercase bg-orange-400 hover:bg-orange-500 transition-colors rounded-xl p-3"
@@ -100,7 +102,7 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 					<div class="relative h-full">
 						<img
 							class="w-full rounded-lg h-64 lg:h-80 object-cover"
-							src="./src/assets/images/activites_accueil.avif"
+							src={activiteaccueil.src}
 							alt="Activités"
 						/>
 						<div class="flex justify-end">
@@ -120,7 +122,7 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 					<div class="relative h-full">
 						<img
 							class="w-full rounded-lg h-64 lg:h-80 object-cover"
-							src="./src/assets/images/infos_accueil.avif"
+							src={infosaccueil.src}
 							alt="Infos pratiques"
 						/>
 						<div class="flex justify-end">
@@ -139,7 +141,7 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 					<div class="relative h-full">
 						<img
 							class="w-full rounded-lg h-64 lg:h-80 object-cover"
-							src="./src/assets/images/about_accueil.avif"
+							src={aboutaccueil.src}
 							alt="À propos"
 						/>
 						<div class="flex justify-end">
@@ -158,7 +160,7 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 					<div class="relative h-full">
 						<img
 							class="w-full rounded-lg h-64 lg:h-80 object-cover"
-							src="./src/assets/images/contact_accueil.avif"
+							src={contactaccueil.src}
 							alt="Contact"
 						/>
 						<div class="flex justify-end">
@@ -197,23 +199,19 @@ import inviteaccueil from "./src/assets/images/invites_accueil.avif";
 						<div class="flex items-center justify-center">
 							<img
 								class="max-h-24"
-								src="./src/assets/images/pole-metiers-arts.avif"
+								src={pma.src}
 								alt="Pôle métiers arts"
 							/>
 						</div>
 						<div class="flex items-center justify-center">
-							<img
-								class="max-h-20"
-								src="./src/assets/images/cnc.avif"
-								alt="CNC"
-							/>
+							<img class="max-h-20" src={cnc.src} alt="CNC" />
 						</div>
 						<div
 							class="flex items-center justify-center col-span-2 lg:col-span-1"
 						>
 							<img
 								class="max-h-16"
-								src="./src/assets/images/bfc.avif"
+								src={bfc.src}
 								alt="Bourgogne-Franche-Comté"
 							/>
 						</div>
