--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import activiteaccueil from "./src/assets/images/activites_accueil.avif";
 import infosaccueil from "./src/assets/images/infos_accueil.avif";
 import aboutaccueil from "./src/assets/images/about_accueil.avif";
 import contactaccueil from "./src/assets/images/contact_accueil.avif";
-import pma from "./src/assets/images/pma.avif";
+import pma from "./src/assets/images/pole-metiers-arts.avif";
 import cnc from "./src/assets/images/cnc.avif";
 import bfc from "./src/assets/images/bfc.avif";
 ---
