--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,15 @@
 import Layout from "../layouts/Layout.astro";
 import imageaccueil from "../assets/images/cineexterieur.avif";
 import imageaccueil2 from "../assets/images/cineexterieurwide.avif";
-import progaccueil from "./src/assets/images/prog_accueil.avif";
-import inviteaccueil from "./src/assets/images/invites_accueil.avif";
-import activiteaccueil from "./src/assets/images/activites_accueil.avif";
-import infosaccueil from "./src/assets/images/infos_accueil.avif";
-import aboutaccueil from "./src/assets/images/about_accueil.avif";
-import contactaccueil from "./src/assets/images/contact_accueil.avif";
-import pma from "./src/assets/images/pole-metiers-arts.avif";
-import cnc from "./src/assets/images/cnc.avif";
-import bfc from "./src/assets/images/bfc.avif";
+import progaccueil from "../assets/images/prog_accueil.avif";
+import inviteaccueil from "../assets/images/invites_accueil.avif";
+import activiteaccueil from "../assets/images/activites_accueil.avif";
+import infosaccueil from "../assets/images/infos_accueil.avif";
+import aboutaccueil from "../assets/images/about_accueil.avif";
+import contactaccueil from "../assets/images/contact_accueil.avif";
+import pma from "../assets/images/pole-metiers-arts.avif";
+import cnc from "../assets/images/cnc.avif";
+import bfc from "../assets/images/bfc.avif";
 ---
 
 <Layout>
